--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -64,6 +64,14 @@ The boxplot for the skill players that they do a lot more compared to the boxplo
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+# Numerical results
+
+```{r}
+favstats(pushups~position,data=mydata)
+```
+
+The average number of push ups done by a line player is around 17. while the skill players have a average number of push ups around 50. 
+
 ## Inferential Results
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
