--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -76,8 +76,14 @@ The average number of push ups done by a line player is around 17. while the ski
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(pushups~position,data=mydata)
+```
+
+The p-value is very long which means that we will reject the null hypothesis. There is a difference when it comes to the amount of pus hups line and skill players can perform. The skill players on the average do three times the amount of push ups compared to the line players.
 
 # Discussion and Conclusion
 
-<!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
-
+<!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!--
+ 
+ I did a variable analysis from which we looked at our variables given in order to help identify which helper file was needed. Then from looking at our variable, we needed the numerical cat helper file in order to help me with this problem. The results i concluded i was able to reject the null hypothesis. This means that their was a major difference in the amount of push ups a skill player can perform compared to a liner player.  
